# IRIS-Cybersecurity-Monitoring-Panel

./: .gitignore  README.md  docker-compose.yml  start.bat
backend/: Cargo.toml
backend/migrations/: 20260418000000_init.down.sql  20260418000000_init.up.sql  20260418000001_telemetry_alerts.up.sql
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/controllers/: ai.rs  auth.rs  device.rs  mod.rs
backend/src/db/: mod.rs
backend/src/errors/: mod.rs
backend/src/middleware/: agent_auth.rs  auth.rs  mod.rs
backend/src/models/: device.rs  mod.rs  user.rs
backend/src/routes/: mod.rs
backend/src/services/: auth.rs  device.rs  mod.rs
backend/src/ws/: mod.rs
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src-tauri/: tauri.conf.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(main)/: layout.tsx
frontend/src/app/(main)/alerts/: page.tsx
frontend/src/app/(main)/alerts/[id]/: AlertDetail.tsx  page.tsx
frontend/src/app/(main)/dashboard/: page.tsx
frontend/src/app/(main)/demo/: page.tsx
frontend/src/app/(main)/devices/: page.tsx
frontend/src/app/(main)/logs/: page.tsx
frontend/src/app/(main)/settings/: page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/components/ui/: dotted-surface.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/stores/: useDeviceStore.ts
frontend/src/types/: index.ts
